<resources>
    <string name="activity_settings_label">Settings</string>
    <string name="activity_about_label">About</string>
    <string name="activity_lock_label">Lock</string>
    <string name="h2_color_picker">Pick a Color</string>
    <string name="h2_delete_group">Are you sure you want to delete this group?</string>
    <string name="h2_select_group">Select Group</string>
    <string name="h2_rename_app">Rename app</string>
    <string name="dialog_rename_file">Rename</string>
    <string name="toast_rename_success">Renamed successfully</string>
    <string name="toast_rename_failed">Rename failed</string>
    <string name="toast_copy_queued">Copied to clipboard</string>
    <string name="toast_paste_success">Pasted successfully</string>
    <string name="toast_paste_failed">Some files could not be pasted</string>
    <string name="toast_not_enough_space">Not enough space on destination</string>
    <string name="toast_saf_required">Grant write access to this storage</string>
    <string name="toast_saf_denied">Write access not granted</string>
    <string name="toast_storage_unavailable">Storage is not available</string>
    <string name="toast_dir_added">Folder added to favorites</string>
    <string name="toast_dir_exists">Already in favorites</string>
    <string name="toast_delete_success">Deleted</string>
    <string name="toast_delete_failed">Delete failed</string>
    <string name="h3_contributors">Contributors</string>
    <string name="h3_icons">Icons</string>
    <string name="h3_fonts">Fonts</string>
    <string name="h3_themes">Themes</string>
    <string name="h3_apps">Applications</string>
    <string name="h3_clock">Clock</string>
    <string name="h3_search">Search</string>
    <string name="h3_battery">Battery</string>
    <string name="h3_date">Date</string>
    <string name="h3_data">Data</string>
    <string name="h3_temperature">Temperature</string>
    <string name="h3_groups">Groups</string>
    <string name="h3_language">Language</string>
    <string name="h3_security">Security</string>
    <string name="h3_system">System</string>
    <string name="h3_background">Background</string>
    <string name="h3_app">App</string>
    <string name="disclaimer_delete_group">Your apps will go to the following group.</string>
    <string name="disclaimer_pick_clock_app">Selecting an app here will set it as your default clock action. When you tap the clock on your home screen, this app will be launched.</string>
    <string name="disclaimer_pick_date_app">Selecting an app here will set it as your default date action. When you tap the date on your home screen, this app will be launched.</string>
    <string name="disclaimer_pick_icon_pack">Choose an installed icon pack. If an icon is missing, Teyin will use the system icon for that app.</string>
    <string name="btn_unlock">Unlock</string>
    <string name="btn_go_back">Go Back</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_about_teyin">About Teyin</string>
    <string name="btn_lock">Lock</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete_group">Delete group</string>
    <string name="btn_join_discord">Join Discord</string>
    <string name="btn_export_data">Export Data</string>
    <string name="btn_clear_data">Clear Data</string>
    <string name="btn_theme_apply_custom">Apply Custom Theme</string>
    <string name="btn_set_default">Set Launcher as default</string>
    <string name="btn_set_clock_app">Change Clock Tap Action</string>
    <string name="btn_set_date_app">Change Date Tap Action</string>
    <string name="btn_refresh_launcher">Refresh launcher</string>
    <string name="btn_change_wallpaper">Change OS wallpaper</string>
    <string name="btn_edit_apps">Manage Installed Apps</string>
    <string name="btn_add_group">+ Add New Group</string>
    <string name="btn_select_icon_pack">Choose icon pack</string>
    <string name="btn_font_custom_pick">Choose Font file</string>
    <string name="colorpicker_theme_foreground">Foreground</string>
    <string name="colorpicker_theme_collapsible_header">Collapsible Header</string>
    <string name="colorpicker_theme_h1">H1</string>
    <string name="colorpicker_theme_icons">Icons</string>
    <string name="colorpicker_theme_accent">Accent</string>
    <string name="colorpicker_theme_background_1">Background 1</string>
    <string name="colorpicker_theme_background_2">Background 2</string>
    <string name="colorpicker_theme_background_3">Background 3</string>
    <string name="colorpicker_theme_input_background">Input Background</string>
    <string name="colorpicker_theme_button_1_background">Button 1 Background</string>
    <string name="colorpicker_theme_button_2_background">Button 2 Background</string>
    <string name="colorpicker_theme_danger">Danger</string>
    <string name="filepicker_selected_icon_pack">Selected pack: %1$s</string>
    <string name="filepicker_icon_pack_not_selected">No icon pack selected</string>
    <string name="filepicker_font_custom_none">No font selected</string>
    <string name="radio_default">Default</string>
    <string name="radio_default_system">Default (System)</string>
    <string name="radio_none">None</string>
    <string name="radio_language_system_default">System Default (fallback to English)</string>
    <string name="radio_language_english" translatable="false">English</string>
    <string name="radio_language_german" translatable="false">Deutsch</string>
    <string name="radio_language_turkish" translatable="false">Türkçe</string>
    <string name="radio_icons_monochrome">Monochrome</string>
    <string name="radio_custom_icon_pack">Custom icon pack</string>
    <string name="radio_clock_none">Hide clock</string>
    <string name="radio_clock_24">24-hour</string>
    <string name="radio_clock_12">12-hour (AM/PM)</string>
    <string name="radio_celsius">Celsius</string>
    <string name="radio_fahrenheit">Fahrenheit</string>
    <string name="radio_font_custom">Custom font</string>
    <string name="radio_background_wallpaper">Show Wallpaper on Home Screen</string>
    <string name="radio_theme_rama">Rama</string>
    <string name="radio_theme_mako">Mako</string>
    <string name="radio_theme_custom">Custom</string>
    <string name="checkbox_lock_settings">Lock Settings</string>
    <string name="checkbox_show_profile_indicator">Show profile indicator</string>
    <string name="checkbox_show_battery_temperature">Show battery temperature</string>
    <string name="checkbox_show_battery_charge_status">Show battery charge status</string>
    <string name="checkbox_show_ungrouped_apps">Show ungrouped apps</string>
    <string name="checkbox_has_collapsible_groups">Allow collapsing groups</string>
    <string name="checkbox_show_search">Show search bar</string>
    <string name="checkbox_show_battery">Show battery</string>
    <string name="checkbox_show_system_bar">Show system bar</string>
    <string name="double_tap_sleep_label">Double tap to sleep</string>
    <string name="checkbox_show_date">Show date</string>
    <string name="checkbox_show_clock">Show clock</string>
    <string name="checkbox_show_year_day">Show day of the year</string>
    <string name="checkbox_show_group_header">Show group header</string>
    <string name="checkbox_randomized_keypad">Randomized keypad</string>
    <string name="checkbox_always_show_search_bar">Always visible</string>
    <string name="checkbox_prevent_home_screen_rotation">Lock screen rotation</string>
    <string name="checkbox_click_on_icons_open_app_settings">Open app settings when clicking icons</string>
    <string name="ctxmenu_rename">Rename</string>
    <string name="ctxmenu_move_to_group">Change group...</string>
    <string name="ctxmenu_open_settings">App settings...</string>
    <string name="label_zoom">Zoom</string>
    <string name="label_screen_opacity_strength">Screen opacity strength</string>
    <string name="hint_search_apps">Search apps...</string>
    <string name="toast_no_clock_app_found">No clock app found</string>
    <string name="toast_unable_open_settings">Unable to open launcher settings</string>
    <string name="toast_unable_open_wallpaper_app">No wallpaper app available</string>
    <string name="toast_unable_launch_app">Unable to launch app</string>
    <string name="toast_reset_done">Reset done</string>
    <string name="toast_reset_failed">Reset failed</string>
    <string name="toast_clock_app_selected">Selected: %1$s</string>
    <string name="toast_date_app_selected">Selected: %1$s</string>
    <string name="toast_no_date_app_found">No date app found</string>
    <string name="toast_group_label_updated">Label Updated</string>
    <string name="toast_select_target_group">Select a target group</string>
    <string name="toast_label_changed">App label updated</string>
    <string name="toast_pin_saved">PIN saved</string>
    <string name="toast_pin_too_short">PIN must be at least 1 digits</string>
    <string name="toast_icon_pack_selected">Selected icon pack: %1$s</string>
    <string name="toast_monochrome_fallback">Monochrome icons require Android 13+, using fallback where unavailable</string>
    <string name="toast_no_icon_pack_found">No compatible icon pack found</string>
    <string name="toast_invalid_color">Invalid color</string>
    <string name="device_admin_label">Teyin screen lock</string>
    <string name="device_admin_description">Allows Teyin to lock the screen from the home screen gesture.</string>
    <string name="double_tap_sleep_admin_explanation">Teyin needs device admin permission to turn off the screen when you double tap on the home screen.</string>
    <string name="double_tap_sleep_enable_admin_toast">Enable device admin access for double tap to sleep</string>
    <string name="double_tap_sleep_admin_declined_toast">Device admin access was not granted</string>
    <string name="double_tap_sleep_failed_toast">Unable to lock the screen</string>
    <string name="double_tap_lock_method_label">Lock method</string>
    <string name="double_tap_lock_method_device_admin">Device Admin</string>
    <string name="double_tap_lock_method_accessibility">Accessibility Service</string>
    <string name="accessibility_service_description">Allows Teyin to lock the screen via accessibility gesture.</string>
    <string name="double_tap_lock_method_accessibility_unavailable">Requires Android 9+</string>
    <string name="double_tap_lock_method_admin_info">Uses Device Admin API.\nBiometric unlock (fingerprint) may not work.</string>
    <string name="double_tap_lock_method_accessibility_info">Uses Accessibility Service.\nBiometric unlock (fingerprint, face) works normally.\nRequires Android 9+.</string>
    <string name="altdescr_search_icon">Toggle search</string>
    <string name="altdescr_clear_search">Clear search</string>
    <string name="altdescr_toggle_group_visibility">Toggle group visibility</string>
    <string name="altdescr_ascend_group">Move group up</string>
    <string name="altdescr_descend_group">Move group down</string>
    <string name="altdescr_save">Save</string>
    <string name="altdescr_selection_check">Selected</string>
    <string name="altdescr_delete_group">Delete group</string>
    <string name="altdescr_toggle_pin_visibility">Toggle PIN visibility</string>
    <string name="altdescr_save_pin">Save PIN</string>
    <string name="altdescr_open_settings">Open settings</string>
    <string name="app_name" translatable="false">Teyin</string>
    <string name="app_creator" translatable="false">Pombo</string>
    <string name="app_desc">A lightweigh, minimal, privacy-first File manager designed for speed, and simplicity.</string>
    <string name="app_background_tasks_desc">No Background Tasks</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="btn_delete_confirm">Delete</string>
</resources>