<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/app_row"
    style="@style/HorizontalList">

    <FrameLayout
        android:id="@+id/toggle_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12sp">

        <ImageView
            android:id="@+id/toggle_visibility_img"
            android:src="@drawable/icon_eye"
            android:contentDescription="@string/altdescr_toggle_group_visibility"
            style="@style/Icon24" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/ascend_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12sp">

        <ImageView
            android:src="@drawable/icon_chevron_up_solid"
            android:contentDescription="@string/altdescr_ascend_group"
            style="@style/Icon24" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/descend_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12sp">

        <ImageView
            android:src="@drawable/icon_chevron_down_solid"
            android:contentDescription="@string/altdescr_descend_group"
            style="@style/Icon24" />
    </FrameLayout>

    <EditText
        android:id="@+id/group_name"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/EditText" />

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/save_changes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12sp">

        <ImageView
            android:src="@drawable/icon_disk"
            android:contentDescription="@string/altdescr_save"
            style="@style/Icon24" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/delete_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12sp">

        <ImageView
            android:src="@drawable/icon_close"
            android:contentDescription="@string/altdescr_delete_group"
            style="@style/Icon24" />
    </FrameLayout>
</LinearLayout>
